# guscc

./: CLAUDE.md  CMakeLists.txt  README.md
src/: ast.c  ast.h  codegen.c  codegen.h  guscc.c  guscc.h  ident.c  ident.h  lex.c  lex.h  main.c  parser.c  parser.h  str.c  str.h  sym.c  sym.h  token.c  token.h
test/: guscc_test.c  lex_test.c  main.c  parser_test.c  ut.h  utils.c  utils.h
test/files/: abstract_decl_cast.c  abstract_decl_sizeof.c  array_basic.c  array_char.c  array_init_char.c  array_init_int.c  array_init_partial.c  array_param.c  array_pointer.c  array_sizeof.c  array_string.c  binary_ops.c  const_cast_sizeof.c  const_global_basic.c  const_local_basic.c  const_param.c  const_pointer_to_const.c  const_ptr_const.c  do_while_basic.c  do_while_continue.c  enum_anonymous.c  enum_basic.c  enum_explicit_values.c  enum_switch.c  enum_variable.c  extern_func_decl.c  extern_func_def.c  extern_local_var.c  fail_array_unsized.c  fail_const_assign.c  fail_const_compound_assign.c  fail_const_decrement.c  fail_const_increment.c  fail_const_ptr_reassign.c  fail_deref_nonptr.c  fail_ellipsis_only.c  fail_enum_no_brace.c  fail_extern_global_init.c  fail_extern_local_init.c  fail_global_nonconstant_init.c  (+133 more)
